chose and images num

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .reg-box {
   position: absolute;
   width: 278px;
@@ -51,11 +52,15 @@
   line-height: 100%;
   color: #000000;
 }
-.sub-title-font {
+.sub-title-font,
+#chosen-image-text {
   margin-top: 3px;
   font-size: 12px;
   line-height: 100%;
   color: #000000;
+}
+#chosen-image-text {
+  color: red;
 }
 
 #password,
@@ -95,6 +100,75 @@
   align-items: center;
   margin-bottom: 30px;
 }
-[v-cloak] {
-  display: none;
+
+.list-array {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 20%;
+  height: 100%;
+  background-color: #000000;
+}
+#project-list {
+  color: white;
+  margin-top: 30%;
+}
+#project-list p {
+  margin-left: 20%;
+  margin-top: 5%;
+  text-transform: capitalize;
+}
+.menu-hr {
+  height: 0.5px;
+  border-width: 0;
+  color: gray;
+  background-color: gray;
+  margin-top: 10%;
+}
+/* .project-title-line {
+  border: 1px solid #000000;
+  width: 80%;
+  left: 10%;
+} */
+.project-text-grey {
+  padding-left: 5%;
+  font-size: 14px;
+  color: #b8b8b8;
+  padding-left: 5%;
+
+  margin-bottom: 5px;
+}
+.project-display {
+  position: relative;
+  top: 200px;
+  width: 80%;
+  min-height: 50%;
+  padding-bottom: 200px;
+}
+.project-title-text {
+  font-size: 22px;
+  line-height: 100%;
+  text-transform: capitalize;
+  padding-left: 5%;
+}
+.project-display img {
+  /* position: absolute; */
+  /* top: 0; */
+  object-fit: cover;
+  width: 200px;
+  height: 200px;
+  padding-left: 5%;
+  padding-top: 5%;
+}
+/* progress bar */
+#progress-div {
+  position: absolute;
+  left: 50%;
+  bottom: 20%;
+  transform: translate(-50%, -50%);
+}
+.progress-text {
+  color: red;
+  font-size: 18px;
 }
